add button with style

--- a/src/assets/css/Todos.module.css
+++ b/src/assets/css/Todos.module.css
@@ -4,3 +4,10 @@
   align-items: center;
   height: 100vh;
   }
+
+.btnContainer {
+  display: flex;
+  justify-content: right; 
+  align-items: center;
+  margin-bottom: 8px;
+}
