--- a/src/assets/sass/Button.module.sass
+++ b/src/assets/sass/Button.module.sass
@@ -1,6 +1,8 @@
 .button
   display: flex
   width: 100px
+  height: 25px
+  align-items: center
   justify-content: center
   border-radius: 5px
   border: 1px solid black
