--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,41 @@
   }
 }
 
-.container {
+.info__box {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 50px 100px 50px 100px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 15px;
+}
+
+.usersName {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 300px;
+}
+
+.userPosts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 818px;
+}
+
+.post-title {
+  margin-top: 10px;
+}
+
+.postComment {
+  width: 1118px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
