--- a/src/assets/sass/Button.module.sass
+++ b/src/assets/sass/Button.module.sass
@@ -1,11 +1,11 @@
 .button
   display: flex
-  width: 100px
-  height: 25px
+  width: 150px
   align-items: center
   justify-content: center
   border-radius: 5px
   border: 1px solid black
+  margin-left: -965px
 
   &:active
     cursor: pointer
