fix posts, imageList

--- a/src/assets/sass/ImagesList.module.sass
+++ b/src/assets/sass/ImagesList.module.sass
@@ -1,16 +1,12 @@
-.cardContent 
-  height: 170px
-  padding: 20px 10px
+.box 
+  position: relative
+
 
 .header
   display: flex
   position: relative
   justify-content: flex-start
   align-items: center
-  margin-bottom: 20px
-  padding: 0 16px
-  width: 1240p
-  border-bottom: 1px solid #1976d2
 
   &__title
     line-height: 48px
@@ -19,4 +15,3 @@
     font-family: "Roboto","Helvetica","Arial",sans-serif
     font-weight: 500
     font-size: 0.875rem
-    position: sticky
