--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
   align-items: center;
   margin: 20px 100px 0 100px;
   width: 1240px;
+  border-bottom: 1px solid #1976d2;
 }
 
 .container {
@@ -58,48 +59,8 @@
   flex-wrap: wrap;
   flex-direction: row;
   margin: 20px 100px 50px 100px;
-  justify-content: space-between;
   width: 1240px;
+  column-gap: 30px;
+  row-gap: 40px;
 }
 
-.users-name {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  row-gap: 5px;
-  width: 300px;
-}
-
-.user-posts {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 818px;
-  row-gap: 20px;
-}
-
-.user-posts-content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  row-gap: 15px;
-}
-
-.post-title {
-  margin: 0px;
-}
-
-.post-comment {
-  width: 1240px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  row-gap: 20px;
-}
-
-.post-comment-content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  row-gap: 15px;
-}
